DS-1286: Support tablelayouts in ModifySpace and XyzSpaceTableHelper. Start to implement tableCreation and cleanUp for V2. Add tableComments during the space creation (spaceId + tableLayout).
Signed-off-by: Maximilian Chrzan <maximilian.chrzan@here.com>
Signed-off-by: mchrza <maximilian.chrzan@here.com>